--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build-export": "bash -c 'rm -fr ../kas.github.io/{404.html,_next,index.html,posts} && npm run build && npx next export && cp -a out/. ../kas.github.io'",
   },
   "dependencies": {
     "@chakra-ui/react": "^1.4.1",
@@ -17,4 +18,5 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0"
   }
+  
 }
